# polkasub0

./: CONTRACT_ARCHITECTURE.md  FRONTEND_PLAN.md  INTEGRATION_SPRINT_PLAN.md  README.md  REVISED_SPRINT_PLAN.md  SPRINT_1_SUMMARY.md  SPRINT_2_SUMMARY.md  SPRINT_PLAN.md  WEB3_CONCEPTS.md  e2e note.md  package.json
contracts/: Cargo.toml
contracts/.papi/: polkadot-api.json
contracts/.papi/contracts/: creator_treasury.json
contracts/creator_treasury_stable/: Cargo.toml  lib.rs
contracts/deployments/creator_treasury/: creator_treasury.contract  creator_treasury.polkavm  passethub.ts
contracts/src/creator_treasury/: Cargo.toml  lib.rs
contracts/src/creator_treasury_pop/: Cargo.toml  lib.rs
frontend/: next.config.ts  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/creators/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/landingpage/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/subscriptions/: page.tsx
frontend/src/components/landing/: hero.tsx  navbar.tsx
frontend/src/lib/: contract.ts  creator_treasury.json  crypto-polyfill.ts
frontend/src/pages/: _app.tsx
frontend/src/styles/: globals.css
planning/: pivot.md  sunday plan.md
ui/: package.json
wiki/: INK_COMPILATION_ISSUES_REPORT.md  INTEGRATION_SPRINT_PLAN.md  POLKADOT_INTEGRATION_ISSUES_REPORT.md  SPRINT_2_PLAN.md  SPRINT_PLAN.md  course idea 1.md  curation based platform.md  decentralised coursehub.md  future steps.md  idea shortlist.md  loyalty program.md  scanners.md  treasure_code.rs  windsurf query.md
(+12 files in other folders)
