[package]
name = "creator_treasury"
version = "6.0.0-alpha"
authors = ["Creator Treasury Team"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "6.0.0-beta.1", default-features = false }

[dev-dependencies]
ink_e2e = { version = "6.0.0-beta.1" }
hex = { version = "0.4.3" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []

[package.metadata.ink-lang]
abi = "ink"
level = "warn"
check-cfg = [
    'cfg(ink_abi, values("ink", "sol", "all"))'
]
